--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-NETLIFY_SITE_ID=f2f4f8e1-aaf9-437f-91ea-62a31badebeb
-URL=http://localhost:8888/.netlify/functions/
+URL=https://gleaming-frangipane-d8c0d8.netlify.app
